@@ -202,8 +202,10 @@ package body XE_Stubs is
               and then Get_Light_PCS (PID)
               and then Main_Partition /= PID
             then
-               Message ("local termination forced for ",
-                        Partitions.Table (PID).Name);
+               if Verbose_Mode then
+                  Message  ("local termination forced for ",
+                            Partitions.Table (PID).Name);
+               end if;
                Set_Termination (PID, Local_Termination);
             end if;
 
@@ -294,6 +296,17 @@ package body XE_Stubs is
       Dwrite_With_Clause (FD, "System.Garlic.Heart");
       Dwrite_With_Clause (FD, "System.Garlic.Options");
       Dwrite_With_Clause (FD, "System.Garlic.Types");
+
+      --  Add termination package if needed
+
+      if Get_Termination (PID) /= Local_Termination
+        or else Main_Partition = PID
+        or else True      --  ??? SHOULD BE SOMETHING LIKE "USE_TASKING(PID)"
+      then
+         Dwrite_With_Clause (FD, "System.Garlic.Termination");
+      else
+         Dwrite_With_Clause (FD, "System.Garlic.Light_Termination");
+      end if;
 
       if Default_Registration_Filter /= No_Filter_Name then
          Dwrite_With_Clause
@@ -542,17 +555,6 @@ package body XE_Stubs is
       Dwrite_Line (FD, 0, "pragma Elaborate_All (System.Garlic.Startup);");
       Dwrite_With_Clause (FD, "System.Garlic.Soft_Links", No_Name, False);
       Dwrite_With_Clause (FD, "System.Partition_Interface", No_Name, False);
-
-      --  Add termination package if needed
-
-      if Get_Termination (PID) /= Local_Termination
-        or else Main_Partition = PID
-        or else True      --  ??? SHOULD BE SOMETHING LIKE "USE_TASKING(PID)"
-      then
-         Dwrite_With_Clause (FD, "System.Garlic.Termination");
-      else
-         Dwrite_With_Clause (FD, "System.Garlic.Light_Termination");
-      end if;
 
       Dwrite_Line (FD, 0, "procedure ", Partition_Main_Name, " is");
       Dwrite_Line (FD, 0, "begin");
